--- a/lms/static/js_test.yml
+++ b/lms/static/js_test.yml
@@ -61,6 +61,7 @@ lib_paths:
     - xmodule_js/common_static/js/vendor/edxnotes/annotator-full.min.js
     - xmodule_js/common_static/js/test/i18n.js
     - xmodule_js/common_static/js/vendor/date.js
+    - xmodule_js/common_static/js/vendor/moment.min.js
 
 # Paths to source JavaScript files
 src_paths:
