Run on python 2.7.3 in Circle.ci

--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,10 @@ dependencies:
 
     - paver install_prereqs
 
+machine:
+  python:
+    version: 2.7.3
+
 test:
   override:
     - ./scripts/circle.sh:
