--- a/circle.yml
+++ b/circle.yml
@@ -3,11 +3,15 @@ dependencies:
     - pip install setuptools==0.6c11
     - pip install distribute==0.6.49
     - pip install pbr==0.9.0
-    - pip install six==1.9.0
-
     - pip install -r requirements/edx/paver.txt
 
-    - paver install_prereqs
+    - bundle install --quiet
+    - npm install
+    - pip install --exists-action w -r requirements/edx/pre.txt
+    - pip install --exists-action w -r requirements/edx/github.txt
+    - pip install --exists-action w -r requirements/edx/local.txt
+    - pip install --exists-action w -r requirements/edx/base.txt
+    - pip install --exists-action w -r requirements/edx/post.txt
 
 machine:
   python:
