Stop installing dependencies after local.txt

--- a/circle.yml
+++ b/circle.yml
@@ -10,8 +10,8 @@ dependencies:
     - pip install --exists-action w -r requirements/edx/pre.txt
     - pip install --exists-action w -r requirements/edx/github.txt
     - pip install --exists-action w -r requirements/edx/local.txt
-    - pip install --exists-action w -r requirements/edx/base.txt
-    - pip install --exists-action w -r requirements/edx/post.txt
+    # - pip install --exists-action w -r requirements/edx/base.txt
+    # - pip install --exists-action w -r requirements/edx/post.txt
 
 machine:
   python:
