--- a/circle.yml
+++ b/circle.yml
@@ -1,17 +1,27 @@
 dependencies:
   override:
+    - npm install
+    - bundle install
+
     - pip install setuptools==0.6c11
     - pip install distribute==0.6.49
-
-    - bundle install --quiet
-    - npm install
-
     - pip install -r requirements/edx/paver.txt
-    - pip install --exists-action w -r requirements/edx/pre.txt
-    - pip install --exists-action w -r requirements/edx/github.txt
-    - pip install --exists-action w -r requirements/edx/local.txt
-    # - pip install --exists-action w -r requirements/edx/base.txt
-    # - pip install --exists-action w -r requirements/edx/post.txt
+
+    # Mirror what paver install_prereqs does
+    - pip install -r requirements/edx/pre.txt
+    - pip install -r requirements/edx/github.txt
+    - pip install -r requirements/edx/local.txt
+    # Within base.txt stevedore had a dependency
+    # on a version range of pbr. Install a version
+    # that falls within that range.
+    - pip install pbr==0.9.0
+    - pip install -r requirements/edx/base.txt
+    - pip install -r requirements/edx/post.txt
+
+  # post:
+    # Now run install_prereqs in case something else
+    # has changed. I *think* this should be a no-op.
+    # - paver install_prereqs
 
 machine:
   python:
