--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,12 @@
+machine:
+  python:
+    version: 2.7.3
+
+general:
+  artifacts:
+    - "reports"
+    - "test_root/log"
+
 dependencies:
   override:
     - npm install
@@ -23,20 +32,7 @@ dependencies:
     - pip install -r requirements/edx/base.txt
     - pip install -r requirements/edx/post.txt
 
-machine:
-  python:
-    version: 2.7.3
-
-general:
-  artifacts:
-    - "reports"
-    - "test_root/log"
-
 test:
   override:
-    - case $CIRCLE_NODE_INDEX in 0) paver test_lib -l common/lib/calc ;; 1) paver test_system -t lms/djangoapps/courseware/tests/tests.py:ActivateLoginTest ;; 2) paver test_system -t cms/djangoapps/contentstore/tests/tests.py:AuthTestCase  ;; esac:
-        parallel: true
-    - mkdir -p $CIRCLE_TEST_REPORTS/junit/
-        parallel: true
-    - cp -r reports/. $CIRCLE_TEST_REPORTS/junit
+    - ./scripts/circle.sh:
         parallel: true
