--- a/circle.yml
+++ b/circle.yml
@@ -34,7 +34,7 @@ dependencies:
 
 test:
   override:
-    - ./scripts/all_tests.sh:
+    - ./scripts/all-tests.sh:
         parallel: true
 
   post:
